--- a/Presentation/Frames/Losning.tex
+++ b/Presentation/Frames/Losning.tex
@@ -38,30 +38,30 @@ Løsning af lineær optimeringsproblemer
 \item Fra min til maks 
 \begin{itemize}
 \item -1 
-\item Ulighed
+\item Ulighed fra $\textbf{A}_i \textbf{x} \geq b_i$ til $-\textbf{A}_i \textbf{x} \leq -b_i$
 \end{itemize}
 \end{itemize}
 \end{frame}
 
-\begin{frame}
-\frametitle{Grafisk løsning}
-\input{img/opti_loes1}
-\end{frame}
-
-\begin{frame}
-\frametitle{Grafisk løsning}
-\input{img/opti_loes2}
-\end{frame}
-
-\begin{frame}
-\frametitle{Grafisk løsning}
-\input{img/opti_loes3}
-\end{frame}
-
-\begin{frame}
-\frametitle{Grafisk løsning}
-\input{img/opti_loes4}
-\end{frame}
+%\begin{frame}
+%\frametitle{Grafisk løsning}
+%\input{img/opti_loes1}
+%\end{frame}
+%
+%\begin{frame}
+%\frametitle{Grafisk løsning}
+%\input{img/opti_loes2}
+%\end{frame}
+%
+%\begin{frame}
+%\frametitle{Grafisk løsning}
+%\input{img/opti_loes3}
+%\end{frame}
+%
+%\begin{frame}
+%\frametitle{Grafisk løsning}
+%\input{img/opti_loes4}
+%\end{frame}
 
 \begin{frame}
 \frametitle{Grafisk løsning}
