Update Losning.tex and Master.tex

--- a/Presentation/Frames/Losning.tex
+++ b/Presentation/Frames/Losning.tex
@@ -92,7 +92,6 @@ Løsning af lineær optimeringsproblemer
 
 \begin{frame}
 \frametitle{Dualproblemer}
-ÅÅÅÅÅH kloge mennesker, kan vi lige snakke om dette kort xD 
 \begin{align*}
 \begin{array}{lrl}
 \text{Maksimér}		&\textbf{c}^T\textbf{x}	& = z		\\
@@ -103,13 +102,13 @@ Løsning af lineær optimeringsproblemer
 %
 
 %
-\begin{align*}
-\begin{array}{lrl}
-\text{Minimér}		&\textbf{p}^T\textbf{b}	& = v			\\
-\text{begrænset af}	&\textbf{p}^TA	&\geq \mathbf{c},	\\
-					&\mathbf{b}				&\geq \mathbf{0}
-\end{array}
-\end{align*}
+%\begin{align*}
+%\begin{array}{lrl}
+%\text{Minimér}		&\textbf{p}^T\textbf{b}	& = v			\\
+%\text{begrænset af}	&\textbf{p}^TA	&\geq (\mathbf{c})^T,	\\
+%					&\mathbf{b}				&\geq \mathbf{0}
+%\end{array}
+%\end{align*}
 
 \begin{align*}
 \begin{array}{lrl}
@@ -187,7 +186,6 @@ Mængde af alle konvekse kombinationer \\
 \begin{itemize}
 	\item \textbf{Konveks:} 
 	$$f(\lambda \textbf{u} + (1- \lambda ) \textbf{v}) \leq \lambda f( \textbf{u}) + (1- \lambda ) f(\textbf{v}) $$ 
-	ÅÅÅÅÅH kloge mennesker, kan vi lige snakke om dette kort xD 
 \end{itemize}
 \input{img/konveksfunktion}
 \begin{itemize}
