--- a/Presentation/Frames/Algebra.tex
+++ b/Presentation/Frames/Algebra.tex
@@ -57,7 +57,6 @@ Denne mængde noteres $\text{span} \{ S \}$ eller $\text{span}\{ \mathbf{u}_1, \
   \draw[line width=2pt,AAUgreen,-stealth](0,0)--(1,2) node[anchor=north east]{$\boldsymbol{\mathbf{u}_3}$};
 \end{tikzpicture}
 %
-\caption{Grafisk repræsentation af vektorerne $\mathbf{u}_1, \mathbf{u}_2,  \mathbf{u}_3$.}
 \label{span_eks}
 \end{figure}
 \end{itemize}
@@ -88,11 +87,11 @@ Hvis en funktion er både injektiv og surjektiv, så er funktionen \textbf{bijek
 \frametitle{Lineær Algebra}
 \begin{itemize}
 \item \textbf{Underrum: } \\ 
-En mængde $\S$, bestående af vektorer i $\R^n$, er et \textbf{underrum} af $\R^n$, hvis den opfylder følgende betingelser:	
+En mængde $S$, bestående af vektorer i $\R^n$, er et \textbf{underrum} af $\R^n$, hvis den opfylder følgende betingelser:	
 \begin{itemize}
-\item $\textbf{0}\in \S$.
-\item $\textbf{u}$,$\textbf{v} \in \S \rightarrow \textbf{u}+\textbf{v} \in \S $.
-\item $\textbf{u} \in \S$ og $c$ er en skalar, så er $\textbf{u}c \in \S$.
+\item $\textbf{0}\in S$.
+\item $\textbf{u}$,$\textbf{v} \in S \rightarrow \textbf{u}+\textbf{v} \in S $.
+\item $\textbf{u} \in S$ og $c$ er en skalar, så er $\textbf{u}c \in S$.
 \end{itemize}
 \item \textbf{Basis: } \\ 
 Lad $\mathcal{U}$ være et ikke-nul-underrum af $\R^n$. 
