Update slides_rasmus.tex, slides_rasmus_geo_simp.tex, and Master.tex

--- a/Presentation/Frames/slides_rasmus.tex
+++ b/Presentation/Frames/slides_rasmus.tex
@@ -34,8 +34,8 @@ Så er den optimale omkostning lig $- \infty$, eller også findes et optimalt ek
 \item Basen er det punkt vi er i.
 \item Den største negative værdi identificeres, da det er punktet der vil forbedre løsningen hurtigst. Flyttes af kanterne. 
 \item Koeficienter ved pivotering bruges til at holde os indenfor polyedraet.
-\item Når der pivoteres omkring det før beskrevne element fundet gennem største negative og koefficienter, sikres dermed en løsning hvor en variabel bliver så stor som mulig uden at bryde grænserne hvilket er et hjørnepunkt.
-\item Gentages til nabopunkt.
+\item  Dermed sikres en løsning, hvor en variabel bliver så stor som mulig uden at bryde grænserne, hvilket er et hjørnepunkt.
+\item Gentages til nabohjørnepunkt.
 \end{itemize}
 \end{frame}
 
