--- a/Presentation/Master.tex
+++ b/Presentation/Master.tex
@@ -229,6 +229,7 @@
 \input{Frames/slides_rasmus.tex}
 \input{Frames/3.9.tex}
 \input{Frames/Simplexmetoden.tex}
+\input{Frames/slides_rasmus_geo_simp.tex}
 \input{Frames/Proces.tex}
 
 \bibliographystyle{apalike}
