--- a/Presentation/Frames/Linear.tex
+++ b/Presentation/Frames/Linear.tex
@@ -83,6 +83,29 @@ B=
 \end{frame}
 %%
 \begin{frame}
+\frametitle{Reduceret trappeform}
+\begin{itemize}
+\item Kan opnås via elementære rækkeoperationer. 
+\item Matricen er på trappeform.
+\item Hvis en søjle har den første ikke-nulindgang i en række, så er alle øvrige indgange i søjlen $0$.
+\item Den første ikke-nulindgang i hver ikke-nulrække er lig $1$. 
+\item Eksempel: 
+\begin{align*}
+A_R=
+\begin{blockarray}{ccccc}
+\begin{block}{[ccccc]}
+1 & 0 & 5 & 0 & 0\\
+0 & 1 & 3 & 0 & 0\\
+0 & 0 & 0 & 1 & 0\\
+0 & 0 & 0 & 0 & 1\\
+\end{block}
+\end{blockarray}
+\end{align*}
+\item Er systemet konsistent? 
+\end{itemize}
+\end{frame}
+%%
+\begin{frame}
 \frametitle{Gauss-elimination}
 \begin{itemize}
 \item En algoritme, der benytter elementære rækkeoperationer. 
