Update 3.9.tex, Algebra.tex, and slides_rasmus.tex

--- a/Presentation/Frames/3.9.tex
+++ b/Presentation/Frames/3.9.tex
@@ -1,11 +1,11 @@
-\begin{frame}
-\frametitle{Hjørner}
-\begin{itemize}
-\item \textbf{$nr. 5$}
-\item Bevis for løsninger i hjørnepunkter (3.9)
-\item Outro $\rightarrow$ hjørnepunkter og simplex
-\end{itemize}
-\end{frame}
+%\begin{frame}
+%\frametitle{Hjørner}
+%\begin{itemize}
+%\item \textbf{$nr. 5$}
+%\item Bevis for løsninger i hjørnepunkter (3.9)
+%\item Outro $\rightarrow$ hjørnepunkter og simplex
+%\end{itemize}
+%\end{frame}
 
 \section{Simplexmetoden}
 \begin{frame}
