--- a/Presentation/Frames/Algebra.tex
+++ b/Presentation/Frames/Algebra.tex
@@ -5,20 +5,20 @@
 Lineær algebra
 \end{frame}
 %
-\begin{frame}
-\frametitle{Lineær Algebra}
-\begin{itemize}
-\item Matrixsum og skalering.
-\item Transponering.
-\item Matrix-vektorprodukt og matrixmultiplikation.
-\item Linearkombinationer.
-\item Span.
-\item Lineær uafhængighed.
-\item Injektiv og surjektiv (bijektiv)
-\item Underrum.
-%Kort om Matrixsum og skalering, Transponering Matrix-vektorprodukt og matrixmultiplakation.
-\end{itemize}
-\end{frame}
+%\begin{frame}
+%\frametitle{Lineær Algebra}
+%\begin{itemize}
+%\item Matrixsum og skalering.
+%\item Transponering.
+%\item Matrix-vektorprodukt og matrixmultiplikation.
+%\item Linearkombinationer.
+%\item Span.
+%\item Lineær uafhængighed.
+%\item Injektiv og surjektiv (bijektiv)
+%\item Underrum.
+%%Kort om Matrixsum og skalering, Transponering Matrix-vektorprodukt og matrixmultiplakation.
+%\end{itemize}
+%\end{frame}
 %%
 \begin{frame}
 \frametitle{Lineær Algebra}
