--- a/Presentation/Frames/slides_rasmus.tex
+++ b/Presentation/Frames/slides_rasmus.tex
@@ -26,17 +26,16 @@ Så er den optimale omkostning lig $- \infty$, eller også findes et optimalt ek
 \item Det centrale er derfor brugen af ortogonalitet, samt en optimal værdi af $\lambda$ således vi ender i et hjørnepunkt.
 \end{itemize}
 \end{frame}
-\begin{frame}
-\begin{itemize}
 
-
-\item Metoden starter i origo.
-\item Basen er det punkt vi er i.
-\item Den største negative værdi identificeres, da det er punktet der vil forbedre løsningen hurtigst. Flyttes af kanterne. 
-\item Koeficienter ved pivotering bruges til at holde os indenfor polyedraet.
-\item  Dermed sikres en løsning, hvor en variabel bliver så stor som mulig uden at bryde grænserne, hvilket er et hjørnepunkt.
-\item Gentages til nabohjørnepunkt.
-\end{itemize}
-\end{frame}
+%\begin{frame}
+%\begin{itemize}
+%\item Metoden starter i origo.
+%\item Basen er det punkt vi er i.
+%\item Den største negative værdi identificeres, da det er punktet der vil forbedre løsningen hurtigst. Flyttes af kanterne. 
+%\item Koeficienter ved pivotering bruges til at holde os indenfor polyedraet.
+%\item  Dermed sikres en løsning, hvor en variabel bliver så stor som mulig uden at bryde grænserne, hvilket er et hjørnepunkt.
+%\item Gentages til nabohjørnepunkt.
+%\end{itemize}
+%\end{frame}
 
 
