--- a/Presentation/Frames/3.9.tex
+++ b/Presentation/Frames/3.9.tex
@@ -18,7 +18,7 @@ Simplexmetoden
 \frametitle{Simplexmetoden}
 \begin{itemize}
 \item Finder en optimal løsning, så længe der findes mindst én basal mulig løsning
-\item Anvender reducerede omkostning til at forbedre løsning
+\item Anvender reduceret omkostning til at forbedre løsning
 \item Problemer kan opstå
 \item 3 forskellige implementeringer.
 \end{itemize}
