--- a/Presentation/Frames/4_mads/hjorner.tex
+++ b/Presentation/Frames/4_mads/hjorner.tex
@@ -5,7 +5,7 @@
 \begin{itemize}
 \item Ekstremumspunkter
 \begin{itemize}
-\item Ikke konveks kombination
+\item Ikke-konveks kombination
 \end{itemize}
 \end{itemize}
 %
