--- a/Presentation/Frames/Losning.tex
+++ b/Presentation/Frames/Losning.tex
@@ -1,9 +1,9 @@
-\section{Løsninger af lineær optimeringsproblemer}
+\section{Løsninger af lineære optimeringsproblemer}
 %
 \begin{frame}
 \centering
 \Huge
-Løsning af lineær optimeringsproblemer 
+Løsning af lineære optimeringsproblemer 
 \end{frame}
 %
 %\begin{frame}
@@ -34,7 +34,7 @@ Løsning af lineær optimeringsproblemer
 \end{align*}
 \begin{itemize}
 \item Objektfunktionen
-\item Lineær betingelser 
+\item Lineære betingelser 
 \item Fra min til maks 
 \begin{itemize}
 \item -1 
@@ -67,7 +67,7 @@ Løsning af lineær optimeringsproblemer
 \frametitle{Grafisk løsning}
 \begin{itemize}
 \item En entydig optimal løsning
-\item Uendelig mange optimale løsninger 
+\item Uendeligt mange optimale løsninger 
 \item En tom løsning
 \item $\infty$ eller $-\infty$ som optimal løsning  
 \end{itemize}
@@ -144,7 +144,7 @@ $
 \end{array}
 $
 \\
-\textbf{Polyeder på standardform} 
+\textbf{Polyedre på standardform} 
 $$\mathcal{P}=\{ \mathbf{x} \in \R^n  \mid  A\mathbf{x}=\mathbf{b}, \mathbf{x} \geq \mathbf{0} \},$$
 \end{frame}
 
@@ -167,14 +167,14 @@ $$\{\textbf{x} \in \R^n \mid \mathbf{a}^T \mathbf{x} \leq b\}$$
 
 
 \begin{frame}
-\frametitle{Konvekse hylster }
+\frametitle{Konvekse hylstre }
 \begin{itemize}
 \item \textbf{Konveks mængde: } \\
 $\lambda \textbf{u} + (1- \lambda ) \textbf{v} \in \mathcal{S}$
 \item \textbf{Konveks kombination: } \\ 
 Vektoren $\sum_{i=1}^{k} \lambda_i \textbf{v}_i$ af vektorerne $\textbf{v}_1, \textbf{v}_2, \ldots, \textbf{v}_k$ 
 \\ $\lambda$ summeret til 1
-\item \textbf{Konveks hylster: } \\
+\item \textbf{Konvekst hylster: } \\
 Mængde af alle konvekse kombinationer \\
 \end{itemize}
 \phantom{H} \\
@@ -189,7 +189,7 @@ Mængde af alle konvekse kombinationer \\
 \end{itemize}
 \input{img/konveksfunktion}
 \begin{itemize}
-\item Lokal minimum $\rightarrow$ Global minimum
+\item Lokalt minimum $\rightarrow$ Globalt minimum
 \end{itemize}
 \phantom{H} \\
 \phantom{H} \\
