--- a/Presentation/Frames/Proces.tex
+++ b/Presentation/Frames/Proces.tex
@@ -2,8 +2,8 @@
 \begin{frame}{Procesanalyse}
 %\frametitle{Proces(hvis vi gider)}
 \begin{itemize}
-\item Er der mere tid? Har Horia lyst til at høre på det? Nej
-\item Projektarbejde i cornaens tidsalder.
-\item En flot tegning
+\item Lidt om proces, hvis tiden er til det. 
+\item Projektarbejde under COVID-19.
+\item En flot tegning? 
 \end{itemize}
 \end{frame}
