--- a/Presentation/Frames/Simplexmetoden.tex
+++ b/Presentation/Frames/Simplexmetoden.tex
@@ -24,7 +24,7 @@
 \item Den naive implementering 
 	\begin{itemize}
 	% \item Høj tidspkompleksitet 
-	\item Løser to lineær ligningssystemer
+	\item Løser to lineære ligningssystemer
 	\end{itemize}
 \item Den reviderede implementering 
 	\begin{itemize}
