--- a/Presentation/Frames/slides_rasmus_geo_simp.tex
+++ b/Presentation/Frames/slides_rasmus_geo_simp.tex
@@ -3,10 +3,10 @@
 
 
 \item Metoden starter i origo.
-\item Basen er det punkt vi er i.
-\item Den største negative værdi identificeres, da det er punktet der vil forbedre løsningen hurtigst. Flyttes af kanterne. 
-\item Koeficienter ved pivotering bruges til at holde os indenfor polyedraet.
-\item  Dermed sikres en løsning, hvor en variabel bliver så stor som mulig uden at bryde grænserne, hvilket er et hjørnepunkt.
+\item Basen er det punkt, vi er i.
+\item Den største negative værdi identificeres, da det er punktet, der vil forbedre løsningen hurtigst. Flyttes af kanterne. 
+\item Koefficienter ved pivotering bruges til at holde os indenfor polyederet.
+\item  Dermed sikres en løsning, hvor en variabel bliver så stor som mulig, uden at bryde grænserne, hvilket er et hjørnepunkt.
 \item Gentages til nabohjørnepunkt.
 \end{itemize}
 \end{frame}
