--- a/Presentation/Frames/Linear.tex
+++ b/Presentation/Frames/Linear.tex
@@ -37,6 +37,7 @@ x_1 & x_2 & x_3 & x_4 & x_5 & b \\
 \end{block}
 \end{blockarray}.
 \end{equation*}
+\item Løsningen er en vektor \mathbf{v}, således at ligningerne er opfyldt, når $x_i = v_i$.
 \end{itemize}
 \end{frame}
 %%
@@ -101,7 +102,7 @@ A_R=
 \end{block}
 \end{blockarray}
 \end{align*}
-\item Er systemet konsistent? 
+\item Konsistens og pivot. 
 \end{itemize}
 \end{frame}
 %%
