Update Linear.tex and Losning.tex

--- a/Presentation/Frames/Losning.tex
+++ b/Presentation/Frames/Losning.tex
@@ -43,25 +43,25 @@ Løsning af lineære optimeringsproblemer
 \end{itemize}
 \end{frame}
 
-%\begin{frame}
-%\frametitle{Grafisk løsning}
-%\input{img/opti_loes1}
-%\end{frame}
-%
-%\begin{frame}
-%\frametitle{Grafisk løsning}
-%\input{img/opti_loes2}
-%\end{frame}
-%
-%\begin{frame}
-%\frametitle{Grafisk løsning}
-%\input{img/opti_loes3}
-%\end{frame}
-%
-%\begin{frame}
-%\frametitle{Grafisk løsning}
-%\input{img/opti_loes4}
-%\end{frame}
+\begin{frame}
+\frametitle{Grafisk løsning}
+\input{img/opti_loes1}
+\end{frame}
+
+\begin{frame}
+\frametitle{Grafisk løsning}
+\input{img/opti_loes2}
+\end{frame}
+
+\begin{frame}
+\frametitle{Grafisk løsning}
+\input{img/opti_loes3}
+\end{frame}
+
+\begin{frame}
+\frametitle{Grafisk løsning}
+\input{img/opti_loes4}
+\end{frame}
 
 \begin{frame}
 \frametitle{Grafisk løsning}
