Update 3.9.tex, Proces.tex, and Master.tex

--- a/Presentation/Frames/3.9.tex
+++ b/Presentation/Frames/3.9.tex
@@ -20,6 +20,9 @@ Simplexmetoden
 \item Finder en optimal løsning, så længe der findes mindst én basal mulig løsning
 \item Anvender reduceret omkostning til at forbedre løsning
 \item Problemer kan opstå
+\begin{itemize}
+\item Degenerering
+\end{itemize}
 \item 3 forskellige implementeringer.
 \end{itemize}
 \end{frame}
