--- a/Presentation/Frames/Proces.tex
+++ b/Presentation/Frames/Proces.tex
@@ -2,8 +2,15 @@
 \begin{frame}{Procesanalyse}
 %\frametitle{Proces(hvis vi gider)}
 \begin{itemize}
-\item Lidt om proces, hvis tiden er til det. 
-\item Projektarbejde under COVID-19.
-\item En flot tegning? 
+\item Inden nedlukning
+\begin{itemize}
+\item Milepælsplanlægning
+\item Faste møder
+\end{itemize}
+\item Under nedlukning
+\begin{itemize}
+\item Dynamiske møder
+\item Digitale værktøjer
+\end{itemize}
 \end{itemize}
 \end{frame}
