--- a/Presentation/Master.tex
+++ b/Presentation/Master.tex
@@ -215,7 +215,14 @@
   \titlepage
 \end{frame}}
 %%%%%%%%%%%%%%%%
-
+%
+\begin{frame}
+\frametitle{Problemformulering}
+\large
+\centering
+Hvordan kan lineære programmeringsproblemer anskues geometrisk, og hvordan kan disse løses ved hjælp af simplexmetoden?
+\end{frame}
+%
 % TOC
 \begin{frame}{Disposition}{}
 \tableofcontents
